# spark-domain-chip-labs

./: .gitignore  AGENTS.md  AUTORESEARCH.md  PROJECT.md  README.md  pyproject.toml  spark-chip.json  spark-researcher.project.json  test_scaffold_validation.py
.github/: CODEOWNERS
docs/: ANALYSIS_DOMAIN_CHIPS_COMPARATIVE.md  ANALYSIS_RECURSIVE_PIPELINE_DEEP_DIVE.md  ANALYSIS_SPARK_RESEARCHER_AND_SWARM.md  ANALYSIS_TEMPLATE_AND_RECURSIVE_LOOPS.md  CHIP_INTELLIGENCE_QUICKSTART.md  EVALUATION_METHODOLOGY.md  EXECUTION_PLAN_2026-03-21.md  HARDENED_RUBRIC_V2.md  INTELLIGENCE_DELIVERY.md  LAB_AGENT_TEAM.md  LAB_AGI_RESEARCH.md  LAB_CHIP_QUALITY_RUBRIC.md  LAB_COLLECTIVE_SYNC.md  LAB_GRADUATION_CRITERIA.md  LAB_MIROFISH_ARCHITECTURE.md  LAB_MISSION.md  LAB_ONE_LOOP_SPEC.md  LAB_RESEARCH_PACKET.md  LAB_SAFETY_POLICY.md  LAB_SOURCE_MAP.md  LAB_TREND_METHODOLOGY.md  MIROFISH_250_RESEARCH.md  MIROFISH_DIAGNOSTICS.md  MIROFISH_DISCOVERY_CONTRACT.md  MIROFISH_DISCOVERY_FACTORY_PLAN.md  MIROFISH_DISCOVERY_PROGRAM.md  MIROFISH_GUIDE.md  MIROFISH_HYBRID_EVALUATION_SPEC.md  MIROFISH_PREDICTION_ENGINE.md  MIROFISH_PROMOTION_REVIEW.md  MIROFISH_TOP_100_RESEARCH.md  PACKAGE_BOUNDARY_MIGRATION_PLAN.md  PRD_RECURSIVE_CHIP_FACTORY.md  PUBLIC_EXPERIMENT_HANDOFF_2026-05-09.md  REPO_SURFACES_AND_STATUS.md  SPARK_SWARM_INTEGRATION_HANDOFF_2026-04-09.md  SPARK_SYSTEM_MAP.md  TODAY_SUMMARY_2026-03-24.md  TODAY_SUMMARY_2026-03-25.md  TODAY_SUMMARY_2026-04-09.md  (+5 more)
scripts/: bridge_startup_yc_evidence.py  compare_agent_counts.py  convert_250_to_viz.py  creator_run_smoke.py  domains_v4.py  (+11 more)
(+779 files in other folders)
