[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-domain-chip-labs"
version = "0.1.0"
description = "Meta-research lab for domain chip R&D, methodology improvement, and recursive self-improvement."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
chip-labs = "chip_labs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
